[package]
name = "naudit"
version = "0.1.0"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
edition = "2018"
description = ""
homepage = "https://github.com/jeremychone/rust-naudit"
repository = "https://github.com/jeremychone/rust-naudit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tar = "0.4"
clap = "2.33.2"
thiserror = "1.0"
walkdir = "2"
globwalk = "0.8.1"
libflate = "1"